Update style.css: trying to make background stop scrolling on iphone

--- a/site/src/css/style.css
+++ b/site/src/css/style.css
@@ -13,7 +13,7 @@
 body {
   background-image: url(/images/background-drawing-lg.svg);
   background-attachment: fixed;
-  background-position: top left;
+  background-size: cover; //for iphones
   color: var(--text);
   font-family: 'Nunito sans', -apple-system, BlinkMacSystemFont, 'Segoe UI',
     Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
